fix scrollbars on fields on Windows/Linux

--- a/qt/ts/scss/editor.scss
+++ b/qt/ts/scss/editor.scss
@@ -9,7 +9,7 @@
     color: vars.$day-text-fg;
     padding: 5px;
     overflow-wrap: break-word;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .clearfix:after {
